--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit
-pandas
-yfinance
-matplotlib
-plotly
-fpdf
-dropbox
-pytz
-prophet
-textblob
-polygon-api-client
-praw
-openpyxl
-requests
++streamlit
++pandas
++yfinance
++matplotlib
++plotly
++fpdf
++dropbox
++pytz
++prophet
++textblob
++polygon-api-client
++praw
++openpyxl
++requests
